2003-12-19  Lluis Sanchez Gual <lluis@ximian.com>

	* DiscoveryDocument.cs: Set namespace for ContractReference references.
	  Write() methods: Added namespace declaration in serializer.
	* DiscoveryDocumentSerializer.cs: Fixed namespace for ContractReference.
	* DiscoveryRequestHandler.cs: Implemented.
	* DynamicDiscoveryDocument.cs: Implemented.
	* ExcludePathInfo.cs, SoapBinding.cs: Removed some TODOs
	
2003-12-12  Lluis Sanchez Gual <lluis@ximian.com>
	
	* DiscoveryReference.cs: In FilenameFromUrl(), improved name generation
	  for some common cases.
	  
2003-11-11  Lluis Sanchez Gual <lluis@ximian.com>

	* DiscoveryDocumentSerializer.cs: The class must be internal.

2003-10-21  Lluis Sanchez Gual <lluis@ximian.com>

	* DiscoveryClientProtocol.cs: Fixed little bug in DiscoverAny.

2003-10-13  Lluis Sanchez Gual <lluis@ximian.com>

	* ContractReference.cs, DiscoveryDocumentReference.cs, SchemaReference.cs:
      Little fixes.
	* DiscoveryClientProtocol.cs: WriteAll(): Write files to the provided
	  directory.
	* DiscoveryReference.cs: Improved method FilenameFromUrl().

2003-10-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* ContractReference.cs, DiscoveryClientProtocol.cs, 
	  DiscoveryClientResult.cs, DiscoveryDocument.cs,
	  DiscoveryDocumentReference.cs, DiscoveryExceptionDictionary.cs,
	  DiscoveryReference.cs, SchemaReference.cs: Implemented initial support
	  for discovery documents (.disco).

2002-08-19  Tim Coleman <tim@timcoleman.com>
	* DiscoveryClientProtocol.cs:
		Added ResolveAll () stub.
	* DiscoveryDocument.cs:
		Added XmlRoot attribute to class.
	* DiscoveryClientDocumentCollection.cs:
	* DiscoveryClientReferenceCollection.cs:
	* DiscoveryClientResultCollection.cs:
	* DiscoveryReferenceCollection.cs:
		Implementation of these classes.

2002-08-04  Dave Bettin <javabettin@yahoo.com>
		* ContractSearchPattern.cs
		* DiscoveryClientDocumentCollection.cs
		* DiscoveryClientProtocol.cs
		* DiscoveryClientResult.cs
		* DiscoveryDocument.cs